更新运维工具应用模块

--- a/content/apps/maintain/statics/css/maintain.css
+++ b/content/apps/maintain/statics/css/maintain.css
@@ -21,4 +21,10 @@
 	text-decoration:none;
 }
 
-
+.outline .outline-right span{
+	display: inline-block;
+    overflow: hidden;
+    width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
