--- a/content/apps/market/statics/front/css/mobile_reward.css
+++ b/content/apps/market/statics/front/css/mobile_reward.css
@@ -6,6 +6,8 @@ body{
 	margin:0px; 
 	padding:0px; 
 	color:#404040;
+	background-color: #75B131;
+	padding-bottom: 2em;
 }
 
 h1,h2,h3,h4,h5,h6,ul,li,dl,dt,dd,form,img,p{
