--- a/content/themes/ecjia-pc/css/style.css
+++ b/content/themes/ecjia-pc/css/style.css
@@ -434,6 +434,17 @@ a:active, a:hover {
     z-index: 1;
     overflow: auto
 }
+.ecjia-category-nav .category-info .ecjia-category-info-l1 .ecjia-category-info-l2::-webkit-scrollbar {
+    width: 10px;
+}
+.ecjia-category-nav .category-info .ecjia-category-info-l1 .ecjia-category-info-l2::-webkit-scrollbar-thumb {
+    background-color: #47aa4d;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+        -ms-border-radius: 4px;
+         -o-border-radius: 4px;
+            border-radius: 4px;
+}
 .ecjia-category-nav .category-info .ecjia-category-info-l1 .ecjia-category-info-l2 .over_2 {
     position: relative;
     line-height: 1;
